# gitflow-ai

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/gitflow_ai/: __init__.py  advisor.py  ai_backend.py  analyzer.py  cli.py  core.py  ui.py
