[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitflow-ai"
version = "1.0.0"
description = "🚀 AI驱动的终端Git工作流智能助手 | AI-Powered Terminal Git Workflow Assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "GitFlow AI Team", email = "gitflow@example.com"}
]
keywords = ["git", "ai", "cli", "workflow", "automation", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

[project.optional-dependencies]
ai = ["openai>=1.0.0", "anthropic>=0.18.0"]
ollama = ["ollama>=0.1.0"]
all = ["openai>=1.0.0", "anthropic>=0.18.0", "ollama>=0.1.0", "requests>=2.28.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "black>=23.0.0", "flake8>=6.0.0", "mypy>=1.0.0"]

[project.scripts]
gitflow = "gitflow_ai.cli:main"
gf = "gitflow_ai.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/gitflow-ai"
Documentation = "https://github.com/yourusername/gitflow-ai#readme"
Repository = "https://github.com/yourusername/gitflow-ai"
Issues = "https://github.com/yourusername/gitflow-ai/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=gitflow_ai --cov-report=term-missing"
